# autonav

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PR_REVIEW.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: maintain.md  ralph-loop.local.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: KNOWLEDGE_PACK_PROTOCOL.md  VERSIONING_STRATEGY.md  getting-started.md  install.md  knowledge-pack-guide.md  memento-architecture.md  security-model.md  use-cases.md
docs/plans/: 2026-02-01-refactor-templates-to-comms-layer-implementation.md  2026-02-01-refactor-templates-to-comms-layer.md
examples/knowledge-packs/platform-engineering/: README.md  system-configuration.md
examples/knowledge-packs/platform-engineering/knowledge/: README.md
examples/knowledge-packs/platform-engineering/knowledge/architecture/: decisions.md  overview.md
examples/knowledge-packs/platform-engineering/knowledge/deployment/: kubernetes.md  troubleshooting.md
examples/knowledge-packs/platform-engineering/knowledge/monitoring/: grafana.md  prometheus.md
examples/platform-engineering/: CREATOR_NOTES.md  INDEX.md  PLATFORM_REVIEW.md  README.md  metadata.json
examples/platform-engineering/knowledge/: architecture.md  deployment.md
examples/platform-navigator/: CLAUDE.md  README.md
examples/platform-navigator/knowledge-base/: README.md  deployment-guide.md  monitoring.md
mahdi/: CLAUDE.md  README.md  config.json
mahdi/.autonav/skills/ask-mahdi/: SKILL.md
mahdi/knowledge/: README.md
packs/: README.md
packs/platform-engineering/: GETTING_STARTED.md  README.md  USER_PERSONAS.md  system-configuration.md  test-questions.md
packs/platform-engineering/knowledge/: configuration.md  incident-response.md  kubernetes.md  monitoring.md  troubleshooting.md
packs/platform-navigator/: .gitignore  README.md  config.json
peanut-nav/: CLAUDE.md  README.md  config.json
peanut-nav/.autonav/skills/ask-peanut-nav/: SKILL.md
peanut-nav/knowledge/: growing-season.md  harvesting.md  troubleshooting.md
rust-rewrite/: .gitignore  Cargo.toml
rust-rewrite/crates/autonav/: Cargo.toml
rust-rewrite/crates/autonav-cli/: Cargo.toml
rust-rewrite/crates/autonav-cli/src/: interview.rs  main.rs  output.rs
rust-rewrite/crates/autonav-cli/src/commands/: chat.rs  init.rs  install.rs  mod.rs  query.rs  uninstall.rs  update.rs
rust-rewrite/crates/autonav-communication/: Cargo.toml
rust-rewrite/crates/autonav-communication/src/: errors.rs  lib.rs  prompts.rs  validation.rs  version.rs
rust-rewrite/crates/autonav-communication/src/schemas/: mod.rs  navigator.rs  pack.rs  plugins.rs  response.rs
rust-rewrite/crates/autonav-plugins/: Cargo.toml
rust-rewrite/crates/autonav-plugins/src/: errors.rs  file_watcher.rs  github.rs  lib.rs  manager.rs  plugin.rs  slack.rs
rust-rewrite/crates/autonav/src/: adapter.rs  errors.rs  lib.rs  navigator.rs  pack_installer.rs  query_engine.rs  repo_scanner.rs  templates.rs  tools.rs
