[workspace]
resolver = "2"
members = [
    "crates/autonav",
    "crates/autonav-cli",
    "crates/autonav-plugins",
    "crates/autonav-communication",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/terraboops/autonav"
authors = ["Autonav Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling (blessed.rs recommended)
thiserror = "2.0"
color-eyre = "0.6"
eyre = "0.6"

# Logging/tracing (blessed.rs recommended)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
owo-colors = "4.1"
dialoguer = "0.11"

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# GitHub API
octocrab = "0.44"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Glob patterns
globset = "0.4"
ignore = "0.4"

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.11"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Semver
semver = { version = "1.0", features = ["serde"] }

# Testing
tempfile = "3.14"
mockall = "0.13"
wiremock = "0.6"
