[package]
name = "autonav-cli"
description = "CLI for Autonav - LLM-agnostic context management system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "autonav"
path = "src/main.rs"

[dependencies]
autonav = { path = "../autonav" }
autonav-communication = { path = "../autonav-communication" }
autonav-plugins = { path = "../autonav-plugins" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"
